# irl-tools

./: README.md  definitions.py  main.py  pyproject.toml
anonymization/: __init__.py
anonymization/anonymization-preprocessing/: filter_chunks.py  label_chunks.py
gql_backend/: __init__.py  backend.py  getters.py  queries.py
resources/: dialog_acts.py  fields.json  mwt.csv
